# algorithms-project-69

./: .coverage  .gitignore  README.md  pyproject.toml  pytest.ini
search_engine/: search_engine.py
tests/: basic_test.py  test_search_engine.py
