[project]
name = "algorithms-project-69"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
]

[tool.poetry]
name = "project-name"
version = "0.1.0"
description = "Описание проекта"
authors = ["Твой ник <email@example.com>"]